# Blitzcrank

./: CMakeLists.txt  JSON.cpp  LICENSE  README.md  plain_ra.cpp  tabular.cpp
arithmetic_blitzcrank/: CMakeLists.txt
arithmetic_blitzcrank/include/: base.h  compression.h  data_io.h  decompression.h  index.h  model.h  model_learner.h  squish_exception.h  string_model.h
arithmetic_blitzcrank/src/: categorical_model.cpp  compression.cpp  data_io.cpp  decompression.cpp  utility.cpp
arithmetic_coding/include/: categorical_model.h  numerical_model.h  utility.h
arithmetic_coding/src/: model.cpp  model_learner.cpp  numerical_model.cpp  string_model.cpp
build-release/: CMakeCache.txt  JSON_blitzcrank  Makefile  USCensus1990.config  cmake_install.cmake  plain_ra  tabular_blitzcrank
build-release/delayed_coding/: Makefile  cmake_install.cmake
build-release/rapidjson/: Makefile  cmake_install.cmake
delay_blitzcrank/include/: categorical_model.h  index.h  json_compression.h  json_model.h  model.h  model_learner.h  simple_prob_interval_pool.h  string_model.h  string_squid.h  timeseries_model.h  utility.h
delay_blitzcrank/src/: decompression.cpp  json_base.cpp  json_compression.cpp  json_decompression.cpp  markov_model.cpp  simple_prob_interval_pool.cpp  string_squid.cpp  timeseries_model.cpp  utility.cpp
delayed_coding/: CMakeLists.txt
delayed_coding/include/: base.h  blitzcrank_exception.h  categorical_tree_model.h  compression.h  data_io.h  decompression.h  json_base.h  json_decompression.h  json_model_learner.h  markov_model.h  numerical_model.h  string_tools.h
delayed_coding/src/: categorical_model.cpp  categorical_tree_model.cpp  compression.cpp  data_io.cpp  json_model.cpp  json_model_learner.cpp  model.cpp  model_learner.cpp  numerical_model.cpp  string_model.cpp  string_tools.cpp
rapidjson/: CMakeLists.txt  allocators.h  document.h  prettywriter.h  reader.h  writer.h
